# speculative-decoding

./: .gitignore  README.md  pyproject.toml
speculative-decoding/experiments/mmlu_baseline/: config.yml  run_mmlu_baseline.py
speculative-decoding/experiments/mmlu_speculative_decoding/: config.yml  run_mmlu.py
speculative-decoding/notebooks/: mmlu_experiment.ipynb
speculative-decoding/src/benchmarks/: __init__.py  runner.py
speculative-decoding/src/decoding/: __init__.py  greedy.py  sampling.py  speculative.py
speculative-decoding/src/models/: __init__.py  loader.py  tokenizer.py  wrapper.py
speculative-decoding/tests/: test_greedy.py  test_models.py  test_runner.py  test_sampling.py  test_speculative.py
